<resources>
    <string name="app_name">Average Joe Shot Timer</string>
    <string name="label_combined_accuracy">Accuracy</string>
    <string name="label_combined_critical">Critical</string>
    <string name="label_combined_shots">Shots</string>
    <string name="label_firearm_stats">Stats</string>
    <string name="label_prev_round_stats">Previous Round</string>
    <string name="label_prev_round_date">mm/dd/yyyy</string>
    <string name="label_avg_draw">Draw (avg)</string>
    <string name="label_avg_reload">Reload (avg)</string>
    <string name="label_avg_split">Split (avg)</string>
    <string name="label_firearm_accuracy">Accuracy</string>
    <string name="label_firearm_critical">Critical</string>
    <string name="label_firearm_shots">Shots</string>
    <string name="list_record_shot">Shot</string>
    <string name="list_record_shot_time">0.000</string>
    <string name="list_record_split">0.000</string>
    <string name="display_combined_accuracy">%</string>
    <string name="display_combined_critical">%</string>
    <string name="display_combined_shots">0</string>
    <string name="display_avg_draw">0.000</string>
    <string name="display_avg_reload">0.000</string>
    <string name="display_avg_split">0.000</string>
    <string name="display_firearm_accuracy">%</string>
    <string name="display_firearm_critical">%</string>
    <string name="display_firearm_shots">0</string>
    <string name="display_shot_timer">00:00:000</string>
    <string name="button_shooter_ready">Shooter Ready</string>
    <string name="button_shooter_stop">Stop</string>
    <string name="button_clear_timer_data">Clear</string>
    <string name="button_track_new_round">Track New Round</string>
    <string name="button_bang">Bang!</string>
    <string name="listView_recorded_shots"></string>
</resources>
